// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`If-Else should render Else 1`] = `
<div>
  fail
</div>
`;

exports[`If-Else should render Then 1`] = `
<div>
  two plus two equals four
</div>
`;

exports[`Unless should not render Unless 1`] = `
<div>
  <p>
    two plus two not equals five
  </p>
</div>
`;

exports[`Unless should render Unless 1`] = `
<div>
  <p>
    two plus two not equals five
  </p>
</div>
`;

exports[`When should not render When 1`] = `<div />`;

exports[`When should render When 1`] = `
<div>
  <p>
    two plus two equals four
  </p>
</div>
`;
